--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -34,8 +34,8 @@ jobs:
 
       - name: Setup Git Configuration
         run: |
-          git config user.email "nadivaaanggraini@gmail.com"
-          git config user.name "nadiva-anggraini"
+          git config user.email "virdalarasati617@gmail.com"
+          git config user.name "0xvirda"
 
       - name: Prepare Commit
         run: |
